<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surfaceBackground"
    app:strokeWidth="0dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/surfaceBackground">

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="0dp"
            android:layout_height="119dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/judulBerita"
            style="@style/TextAppearance.App.TitleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:layout_marginVertical="10dp"
            android:text="@string/judulBerita"
            android:hyphenationFrequency="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newsImage" />

        <TextView
            android:id="@+id/sumberBerita"
            style="@style/TextAppearance.App.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumberBerita"
            android:layout_marginVertical="11dp"
            app:layout_constraintStart_toStartOf="@id/judulBerita"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tanggalPublikasi"
            style="@style/TextAppearance.App.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggalPublikasi"
            android:layout_marginHorizontal="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/sumberBerita" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>