<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackground"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/newsImage"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CornerImage"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/back_icon"
            android:elevation="4dp"
            android:layout_marginVertical="7dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/judulBerita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulBerita"
            style="@style/TextAppearance.App.HeadlineSmall"
            android:layout_marginVertical="17dp"
            app:layout_constraintTop_toBottomOf="@id/newsImage"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/sumberBerita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumberBerita"
            style="@style/TextAppearance.App.BodyMedium"
            android:layout_marginVertical="17dp"
            app:layout_constraintTop_toBottomOf="@id/judulBerita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/separator"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            style="@style/TextAppearance.App.HeadlineSmall"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/sumberBerita"
            app:layout_constraintStart_toEndOf="@id/sumberBerita"
            app:layout_constraintEnd_toStartOf="@id/tanggalPublikasi"
            app:layout_constraintBaseline_toBaselineOf="@id/sumberBerita"/>

        <TextView
            android:id="@+id/tanggalPublikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggalPublikasi"
            style="@style/TextAppearance.App.BodySmall"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/sumberBerita"
            app:layout_constraintStart_toEndOf="@id/separator"
            app:layout_constraintBaseline_toBaselineOf="@id/sumberBerita"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginVertical="14dp"
            app:layout_constraintTop_toBottomOf="@id/sumberBerita"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            style="@style/TextAppearance.App.BodyLarge"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hyphenationFrequency="normal"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/readMoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readMoreText"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginVertical="7dp"
            style="@style/TextAppearance.App.BodyMedium"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Baca selengkapnya artikel ini di browser"
            app:layout_constraintTop_toBottomOf="@id/newsDescription"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>